--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,5 @@
 language: node_js
-node_js:
-  - "stable"
-cache:
-  directories:
-    - node_modules
-script:
-  - npm test
-  - npm run build
-on:
-  branch: master
+deploy:
+  provider: firebase
+  token:
+    secure: "1/lgbLSEFYxFax1SCJ5QVntW1FZV2oeNztZiohcB1VQKY"
