--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "concurrently": "^4.0.1",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "firebase": "^6.1.0",
     "moxios": "^0.4.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
